--- a/jobs/opa/templates/config/tls.key.erb
+++ b/jobs/opa/templates/config/tls.key.erb
@@ -1,3 +1,3 @@
-<% if_p('tls.private_key') do |private_key| %>
-<%= private_key %>
-<% end %>
+<% if_p('tls.private_key') do |private_key| -%>
+<%= private_key -%>
+<% end -%>
